[gd_scene load_steps=7 format=3 uid="uid://csyjk7nadnig4"]

[ext_resource type="Script" path="res://ouroboros/scripts/gameplay/door_puzzle.gd" id="1_1sk48"]
[ext_resource type="Material" uid="uid://bs2hwfctie2qd" path="res://ouroboros/textures/light_metal.tres" id="1_050co"]
[ext_resource type="PackedScene" uid="uid://b7cw7rgnj4764" path="res://ouroboros/scenes/objects/wood_door.tscn" id="1_d6cg6"]
[ext_resource type="Material" uid="uid://demuma08n5ep6" path="res://ouroboros/textures/light.tres" id="2_j4xxc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_im3hf"]
size = Vector3(2, 3, 0.0864258)

[sub_resource type="BoxMesh" id="BoxMesh_gmp50"]
size = Vector3(0.2, 0.2, 0.1)

[node name="DoorPuzzle" type="Node3D"]

[node name="DoorPuzzle" type="Node3D" parent="."]
script = ExtResource("1_1sk48")
activated_mat = ExtResource("2_j4xxc")

[node name="Trigger0" type="Area3D" parent="DoorPuzzle"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0.372353, 0, 3.11186)
collision_layer = 3
collision_mask = 3
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorPuzzle/Trigger0"]
shape = SubResource("BoxShape3D_im3hf")

[node name="Trigger1" type="Area3D" parent="DoorPuzzle"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0.363644, 0, 7.10786)
collision_layer = 3
collision_mask = 3
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorPuzzle/Trigger1"]
shape = SubResource("BoxShape3D_im3hf")

[node name="Lights" type="Node3D" parent="DoorPuzzle"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -0.693357, 1.5, 0.221859)

[node name="Light0" type="MeshInstance3D" parent="DoorPuzzle/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 0, 0)
material_override = ExtResource("1_050co")
mesh = SubResource("BoxMesh_gmp50")

[node name="Light1" type="MeshInstance3D" parent="DoorPuzzle/Lights"]
material_override = ExtResource("1_050co")
mesh = SubResource("BoxMesh_gmp50")

[node name="Light2" type="MeshInstance3D" parent="DoorPuzzle/Lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0)
material_override = ExtResource("1_050co")
mesh = SubResource("BoxMesh_gmp50")

[node name="WoodDoor" parent="DoorPuzzle" instance=ExtResource("1_d6cg6")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
